<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/attz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/dialog_alert_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/adv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_about_to_register_a_new_user"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/prv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_use"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/adviceholder">

            <TextView
                android:id="@+id/advice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EULA"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

    <Switch
        android:id="@+id/swacpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree_to_terms" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/refuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>