<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/accent_background_dark"
    tools:context="utenti.diario.inizio">


    <TextView
        android:id="@+id/welcometextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/welcome"
        android:textSize="36sp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="74dp" />

    <TextView
        android:id="@+id/didascaliatextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcometextview"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome2" />

    <EditText
            android:id="@+id/nameinput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/didascaliatextview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="92dp"
            android:drawableLeft="@drawable/ic_abstract_user_flat_2"
            android:drawableTint="#FFF"
            android:ems="10"
            android:hint="@string/username"
            android:maxLines="1"
            android:inputType="textPersonName" />

    <LinearLayout
            android:id="@+id/passwordcontainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/nameinput"
            android:layout_below="@+id/nameinput"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/passwordinput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/nameinput"
                android:layout_below="@+id/nameinput"
                android:drawableLeft="@drawable/ic_lock1600"
                android:drawableTint="#FFF"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingRight="60dp"/>

        <ImageButton
                android:id="@+id/showPassword"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-50dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:elevation="0dp"
                android:paddingBottom="10dp"
                android:tint="#FFFF"
                android:src="@drawable/showpassword_icon"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_bt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:enabled="false"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp" />

    <Spinner
            android:id="@+id/institutes_spinner"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordcontainer"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/classes_spinner"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/institutes_spinner"
        android:layout_below="@+id/institutes_spinner"
        android:spinnerMode="dialog"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/class_capacity_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/login_bt"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/login_bt"
        android:paddingBottom="50dp"
        android:textAlignment="center"
        android:textStyle="bold" />


</RelativeLayout>
